WebInject

Copyright 2010 Sven Nierlein (nierlein@cpan.org)
Copyright 2004-2006 Corey Goldberg (corey@goldb.org)
For information and documentation, visit the website at http://www.webinject.org

---------------------------------
Release History:

Version 1.51 - xxx
    - added EPN support for check_webinject
    - remove the long nagios output for non failed checks

Version 1.50 - Jul 29, 2010
    - changed layout to common cpan module style
    - seperated module into gui and core
    - added timeout option
    - added report-type option
    - added break_on_errors option
    - added warning / critical threshold option
    - added max_redirect option
    - added generic option to set config.xml options
    - added label setting for nagios perf data
    - fixed nagios performance data

Version 1.41 - Jan 4, 2006
    - Added ability to add multiple HTTP Headers within an 'addheader' testcase parameter
    - Added 'addheader' testcase parameter to GET requests (previously only supported POST)
    - Fixed GUI layout for high dpi displays
    - Bugfixes for 'verifyresponsecode' and 'errormessage' parameters


Version 1.40 - Dec 6, 2005
    - Support for Web Services (SOAP/XML)
    - Added XML parser for parsing and verification of XML responses (web services)
    - Support for 'text/xml' and 'application/soap+xml' Content-Type (web services)
    - Added new 'addheader' testcase parameter so you can specify an additional HTTP Header field for requests
    - Support for setting variables/constants within test case files
    - Added ability to call generic external Perl plugins for easier integration and post-processing
    - More detail added to XML output
    - Code refactoring

    
Version 1.35 - April 4, 2005
    - New command line option (-o) to specify location for writing output files (http.log, results.html, and results.xml)
    - Nagios plugin performance data support