@@ -30,6 +30,21 @@ sub handle_request {
         sleep($1);
         print "HTTP/1.0 200 OK\r\n\r\nsleeped $1 seconds";
     }
+    elsif($method eq 'GET' and $path =~ m|/auth|) {
+        if(defined $ENV{'HTTP_AUTHORIZATION'} and $ENV{'HTTP_AUTHORIZATION'} eq 'Basic dXNlcjpwYXNz') {
+            print "HTTP/1.0 200 OK\r\n\r\nauth successfull";
+        }
+        elsif(defined $ENV{'HTTP_AUTHORIZATION'}) {
+            print "HTTP/1.0 403 Forbidden\r\n\r\nyou are not authorized";
+        } else {
+            print "HTTP/1.0 401 Authorization required\r\n";
+            print "WWW-Authenticate: Basic realm=\"my_realm\"\r\n";
+            print "\r\n";
+            print "got auth request with the following cgi object:\n";
+        }
+        print Dumper($cgi);
+        print Dumper(\%ENV);
+    }
 
     # POST Requests
     elsif($method eq 'POST' and $path =~ m|/post|) {
